<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ShopMall</string>
    <string name="title_home">首页</string>
    <string name="title_category">分类</string>
    <string name="title_discovery">发现</string>
    <string name="title_shop">购物车</string>
    <string name="title_mine">我的</string>
    <string name="desc">无描述</string>
    <string name="speech_appid">appid=57122290</string>
    <string name="bmob_appid">566c437eb323171c9c7ae4aeffe4f175</string>
    <string name="umeng_appid">5714518ae0f55a8a2b001b90</string>
    <string name="juhe_appid">75555d446f868fc0814b172415d35cef</string>
    <string name="hint_internet_not_connected">😨 无网络连接，请检查您的手机网络</string>
    <string name="hint_cart_empty">购物车空空如也</string>
    <string name="hint_not_login">你还没有登录</string>
    <string name="price">
        ￥ <xliff:g id="price">%1$1s</xliff:g>
    </string>

    <string name="word_count">
        <xliff:g id="price">%1$1s</xliff:g> /40
    </string>
    <string name="postage">
        快递：<xliff:g id="num">%1$2s</xliff:g>
    </string>
    <string name="sell_num">
        月售：<xliff:g id="num">%1$2d</xliff:g>笔
    </string>

    <string name="comment">
        宝贝评价( <xliff:g id="num">%1$</xliff:g> )
    </string>

    <string name="pay_count">
        <xliff:g id="num">%1$d</xliff:g> 人付款
    </string>

    <string name="pots_date">
        配送日期：{0}
    </string>

    <string name="order_no">
        订单号：{0}
    </string>

    <string name="bill_tile">
        发票抬头：{0}
    </string>

    <string name="real_money">
        实付款：￥{0}
    </string>

    <string name="order_time">
        下单时间： {0}
    </string>

    <string name="card_money">
        <![CDATA[
          <font size="4">￥<font size="12" color="red" style="bold">%1$s</font></font>
        ]]>
    </string>

    <string name="date">{0,date,long}</string>
    <string name="third_item">
       <![CDATA[
        <font color="black" size="5"><big>%1$d</big><br/> <font color="gray"><small>%2$s</small></font></font>
        ]]>
    </string>
    <string name="third_service">
       <![CDATA[
        <font color="gray" ><small>%1$s</small><font color="red"><small>%2$ 3.1f</small></font></font>
        ]]>
    </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号/会员号/邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>
