<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category"
        android:title="@string/title_category"/>

    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/ic_discovery"
        android:title="@string/title_discovery"/>
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_shop"/>
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine"
        android:title="@string/title_mine"/>
</menu>
